--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Hm, not sure what you're looking for, but it's not here!</strong></p>
+  <p>Maybe you should check out my <a class="link-primary text-accent" href="/">homepage</a> instead!</p>
 </div>
